[package]
name = "cutlass"
version = "0.1.0"
authors = ["jake"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bendy = "0.3.0"
buffer = "0.1.8"
byteorder = "1.3.4"
rand = "0.7.3"
rust-crypto = "0.2.36"
tokio = { version = "0.2.19", features = ["full"] }